mplemented page routing with angular ui-router

--- a/src/details/index-details.html
+++ b/src/details/index-details.html
@@ -1,9 +1,8 @@
 <div>
-
-<p>{{detailsController.name}}</p>
-    <!--<p>{{detailsController.user.name.first}}</p>-->
-    <!--<p>{{detailsController.user.name.last}}</p>-->
-    <!--<p>{{detailsController.user.gender}}</p>-->
-    <!--<p>{{detailsController.user.email}}</p>-->
-    <!--<p>{{detailsController.user.phone}}</p>-->
+    <p>{{detailsController.name}}</p>
+    <p>{{detailsController.user.name.first}}</p>
+    <p>{{detailsController.user.name.last}}</p>
+    <p>{{detailsController.user.gender}}</p>
+    <p>{{detailsController.user.email}}</p>
+    <p>{{detailsController.user.phone}}</p>
 </div>
