--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <!--</script>-->
 
     <script type="text/javascript" src="./demoangular.js"></script>
-    <script type="text/javascript" src="./bundle.js"></script>
+    <script type="text/javascript" src="./modules.js"></script>
 </head>
 <!-- 3. Display the application -->
 <body ng-app="myModule">
