added support for less files

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
 
     <script type="text/javascript" src="./demoangular.js"></script>
     <script type="text/javascript" src="./modules.js"></script>
+    <link rel="stylesheet" type="text/css" href="application.css"/>
+    <link rel="stylesheet" type="text/css" href="bootstrap.css"/>
 </head>
 <!-- 3. Display the application -->
-<body ng-app="myModule">
+<body ng-app="myModule" >
 
 <!--<ui-view>-->
     <!--<div class="row">-->
@@ -44,6 +46,6 @@
     <!--</div>-->
 
 <!--</ui-view>-->
-<div ui-view="main"></div>
+<div ui-view="main" class="kourades"></div>
 </body>
 </html>
