--- a/src/user/user.html
+++ b/src/user/user.html
@@ -1,17 +1,17 @@
-<div class="row">
+<div class="row text-info">
     <div ng-init="userController.getUser()">
         <!--<p>Your fucking name is: {{ controller.user.name.first }}</p>-->
         <!--<p>Aaaaaand your fucking last name iiiiissss: {{controller.user.name.last}}</p>-->
         <!--<img ng-src="{{controller.user.picture}}">-->
 
-        <ul ng-repeat="user in userController.users">
-            <li>
-                <div class="row" style="border:1px solid black;">
-                    <p>{{user.name.first}}</p>
-                    <p>{{user.name.last}}</p>
+        <ul class="list-group " ng-repeat="user in userController.users">
+            <li class="list-group-item kouraditses">
+                <div class="row">
+                    <p class="col-lg-3">{{user.name.first}}</p>
+                    <p class="col-lg-3">{{user.name.last}}</p>
                     <img ng-src="{{user.picture.medium}}">
 
-                    <button type="submit" ng-click="userController.goToUserPage(user)">do it</button>
+                    <button type="button" class="btn btn-danger" ng-click="userController.goToUserPage(user)">do it</button>
                 </div>
             </li>
         </ul>
