--- a/src/details/index-details.html
+++ b/src/details/index-details.html
@@ -1,8 +1,12 @@
-<div>
+<div ng-init="detailsController.getRandomPeople()">
     <p>{{detailsController.name}}</p>
     <p>{{detailsController.user.name.first}}</p>
     <p>{{detailsController.user.name.last}}</p>
     <p>{{detailsController.user.gender}}</p>
     <p>{{detailsController.user.email}}</p>
     <p>{{detailsController.user.phone}}</p>
+
+    <person-list current-persons="detailsController.randomUsers"
+        on-selection="detailsController.onSelectionChanged(selection)">
+    </person-list>
 </div>
