Finished jasmine tests and refactores the ui routing configuration to be in a separate module file

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="bootstrap.css"/>
 </head>
 <!-- 3. Display the application -->
-<body ng-app="myModule" >
+<body ng-app="MyRoutes" >
 
 <!--<ui-view>-->
     <!--<div class="row">-->
